--- a/site/styles/style.css
+++ b/site/styles/style.css
@@ -49,9 +49,7 @@ h3 {
     width: 90px;
     height: 90px;
     border-radius: 50%;
-    border: 2px solid white;
-    
-    
+    border: 2px solid white;  
 }
 #profilename{
     width: 100%;
@@ -118,9 +116,14 @@ h3 {
         box-shadow: inset black 0px 0px 5px;       
     }
 #killdeathratio{
-    height: 100px;
     width: 100%;
     margin: 0 auto;
+    padding: 0;
+    vertical-align: center;
+    line-height: 28px;
+}
+#killdeathratio h2{
+    margin: 0;
     padding: 0;
 }
 #killdeathratio_outer{
@@ -165,9 +168,22 @@ h3 {
     color: #0e75ec;
     margin-top: -10px !important;
 }
+#fav_weapons_headline{
+    background: url('/res/border.png');
+    background-repeat: no-repeat;
+    margin-top: 20px;
+    padding-top: 2px;
+    padding-left: 5px;
+}
+#fav_weapons{
+    height: 170px;
+    overflow: hidden;
+    cursor: pointer;
+}
 #fav_weapons .fav_weapon{
     display: inline-block;
     margin: 0px 8px 5px 0px;
+    width: 49%;
 }
 #fav_weapons .weaponnumber{
     background: white;
@@ -205,7 +221,15 @@ h3 {
     margin-left: 7px;
     vertical-align: top;
 }
-
+#fav_weapons .hitmarker{
+    width: 13px;
+    margin-left: 3px;
+}
+.show_more{
+    width: 100%;
+    text-align: right;   
+    cursor: pointer;
+}
 
 @media screen and (max-width: 560px){
     #search{
