--- a/site/styles/style.css
+++ b/site/styles/style.css
@@ -11,14 +11,13 @@ body{
     padding: 0;
     color: white;
 }
-h2 {
+h2, h3{
     padding: 0;
     margin: 0;
-    
+    font-weight: 300;
 }
-h3 {
-    margin: 0; 
-    padding: 0;
+h1{
+    font-weight:300;
 }
 * {
   box-sizing: border-box;
@@ -123,26 +122,56 @@ h3 {
     line-height: 28px;
 }
 #killdeathratio h2{
-    margin: 0;
-    padding: 0;
+    background: url('/res/border.png');
+    background-repeat: no-repeat;
+    padding-top: 2px;
+    padding-left: 5px;
 }
 #killdeathratio_outer{
-    background-color: black;
+    background: black;
     border: 2px solid white;
     height: 30px;
     width: 100%;
 }
 #killdeathratio_inner{
-    background-color:white;
+    background:white;
     height: 30px;
     position: relative;
     top: -30px;
 }
 #killdeathratio_number{
     color: black;
-    position: relative;
-    top: 2px;
+    display: inline-block;
     padding-left: 5px;
+    margin-top: 2px;
+}
+#kills_mouse{
+    display: inline-block;
+    margin-top: 2px;
+    margin-right: 5px;
+    float: right;
+    color: black;
+    opacity: 0;
+    transition: all 0.3s;
+    
+}
+#deaths_mouse{
+    display: inline-block;
+    position: absolute;
+    left: 100%;
+    margin-top: 2px;
+    margin-left: 5px;
+    opacity: 0;
+    transition: all 0.3s;
+}
+#killdeathratio_container{
+    cursor: pointer;
+}
+#killdeathratio_container:hover #kills_mouse{
+    opacity: 1;
+}
+#killdeathratio_container:hover #deaths_mouse{
+    opacity: 1;
 }
 #mainstats{
     height: 60px;
@@ -151,13 +180,12 @@ h3 {
 }
 .mainstat{
     background: url('/res/border.png');
-    width:  20%;
+    background-repeat: no-repeat;
+    width:  19%;
     height: inherit;
     display:inline-block;
-    background-repeat: no-repeat;
     padding-top: 2px;
     padding-left: 5px;
-    
 }
 .mainstat h2{
     margin: 0;
@@ -214,7 +242,7 @@ h3 {
 #fav_weapons h2{
     margin-bottom: 10px;
 }
-#fav_weapons .icon{
+.icon{
     font-family: "weapons";
     font-size: 3.1rem;
     display: inline-block;
@@ -231,6 +259,69 @@ h3 {
     cursor: pointer;
 }
 
+.fav_map{
+    width: 32%;
+    height: 150px;
+    display: inline-block;
+    margin: 0 7px 7px 0;
+    overflow: hidden;
+    cursor: pointer;
+}
+.map_img{
+    width: 100%;
+    height: 150px;
+    position: relative;
+}
+.map_name{
+    position: absolute;
+    bottom: 8px;
+    left: 8px;
+    background: white;
+    padding: 4px;
+    color: black;
+    font-weight: 300;
+}
+.map_wins{
+    position: absolute;
+    bottom: 8px;
+    right: 8px;
+    background: white;
+    padding: 4px;
+    color: black;
+    font-weight: 300;
+}
+.map_info{
+    font-size: 1.2rem;
+    padding-top: 5px;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+}
+#last_match h2{
+    background: url('/res/border.png');
+    background-repeat: no-repeat;
+    padding-top: 2px;
+    padding-left: 5px;
+}
+.last_match_stat{
+    width: 49%;
+    display: inline-block;
+    font-size: 1.3rem;
+}
+.last_match_stat b{
+    font-weight: 300;
+}
+#last_match_result{
+    font-size: 1.3rem;
+    border-left: 1px solid;
+    padding-left: 4px;
+}
+#weapon_name_fav{
+    font-size: 2rem;
+    display: inline-block;
+    height: 100%;
+    vertical-align: center;
+}
 @media screen and (max-width: 560px){
     #search{
         width: 100%;
