--- a/site/styles/style.css
+++ b/site/styles/style.css
@@ -87,6 +87,7 @@ a:visited{
     background-color: black;
     margin: 0 auto;
     margin-top: 40px;
+    display: none;
 }
 .show_more{
     width: 100%;
