--- a/site/styles/style.css
+++ b/site/styles/style.css
@@ -10,6 +10,9 @@ body{
     margin: 0;
     padding: 10px;
     color: white;
+    background-image: url("/res/background.png");
+    background-position: fixed;
+    background-repeat: no-repeat;
 }
 h2, h3{
     padding: 0;
@@ -84,7 +87,6 @@ a:visited{
 
 #container_data{
     width: 800px;
-    background-color: black;
     margin: 0 auto;
     margin-top: 40px;
     display: none;
@@ -358,7 +360,7 @@ b{
         width: 100%;
     }
 }
-@media screen and (max-width: 820px){
+@media screen and (max-width: 830px){
     #container_data{
         width: 100%;
     }
@@ -374,13 +376,10 @@ b{
     .last_match_stat{
         width: 97%;
     }
-}
-@media screen and (max-width: 810px){
     .fav_weapon{
         width: 100% !important;
         display: block;
     }
-    
 }
 @media screen and (max-width: 760px) and (min-width: 737px){
     .fav_map{
